--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "panelkit",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.5",
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
